Fix overlap add new button issue

--- a/assets/styles/mappingContainer.scss
+++ b/assets/styles/mappingContainer.scss
@@ -220,6 +220,11 @@
 					}
 				}
 			}
+			>.singleProperty {
+				&:last-child {
+					padding-bottom: 15px;
+				}
+			}
 		}
 		@media screen and (max-width: 768px) {
 			padding-left: 0;
